--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ titlecase: true
 owner:
   name: Rohit Mishra
   avatar: face.jpg
-  bio: Machine Learning, Dialogue Systems, Artificial Intelligence
+  bio: Dialogue Systems, Natural Language Processing, Machine Learning, Deep Learning, Artificial Intelligence.
   email: rohit129iiita@gmail.com
   disqus-shortname: Rohit
   google:
